# regulatory-guidance-tracker

./: .gitignore  PROJECT_LOG.md  README.md  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: __init__.py  cli.py  config.py  seed.py
app/crawlers/: __init__.py  base.py  cde.py  ema.py  fda.py  ich.py  pmda.py
app/normalizers/: __init__.py  dates.py  status.py  topics.py
app/reports/: markdown_report.py
app/storage/: db.py  models.py  repository.py
app/web/: __init__.py  streamlit_app.py
configs/: sources.yaml
guidance_collector/: __init__.py  cli.py  ema.py  fda.py  report.py  schema.py
reports/: fda_guidance.html  guidance_dashboard.html
scripts/: README.md  update_guidance_database.ps1
tests/: test_cde_crawler.py  test_config.py  test_date_parser.py  test_ema.py  test_ema_crawler.py  test_fda.py  test_ich_crawler.py  test_pmda_crawler.py  test_report.py  test_repository.py  test_status_normalizer.py  test_streamlit_app.py  test_topic_normalizer.py  test_update_script.py
tools/: fda_browser_export.js
